--- a/index.html
+++ b/index.html
@@ -4,107 +4,126 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - Everpulse</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f7fa;
+      color: #333;
+      line-height: 1.7;
+    }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+    }
+    h1 {
+      color: #2c3e50;
+      font-size: 2rem;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+    h2 {
+      color: #16a085;
+      margin-top: 25px;
+      font-size: 1.4rem;
+    }
+    p {
+      margin-bottom: 15px;
+      text-align: justify;
+    }
+    strong {
+      color: #2c3e50;
+    }
+    .meta {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 0.95rem;
+      color: #555;
+    }
+    ul {
+      margin: 10px 0 20px 20px;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+    }
+    footer a {
+      color: #16a085;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <h1>Privacy Policy for Everpulse</h1>
-  <p><strong>Effective Date:</strong> September 2, 2025</p>
-  <p>📜 Privacy Policy for Everpulse
+  <div class="container">
+    <h1>Privacy Policy for Everpulse</h1>
+    <div class="meta">
+      <p><strong>Effective Date:</strong> September 2, 2025</p>
+      <p><strong>Last Updated:</strong> September 2, 2025</p>
+    </div>
 
-Effective Date: [Insert Date]
-Last Updated: [Insert Date]
+    <p>Everbolt Engineering (Pvt) Ltd (“we,” “our,” “us”) respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how our mobile application <strong>Everpulse</strong> (“App”) collects, uses, and protects your data.</p>
 
-Everbolt Engineering (Pvt) Ltd (“we,” “our,” “us”) respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how our mobile application Everpulse (“App”) collects, uses, and protects your data.
+    <h2>1. Information We Collect</h2>
+    <ul>
+      <li><strong>Personal Information:</strong> Name, email, phone number (if provided).</li>
+      <li><strong>Device Information:</strong> Device model, OS, unique identifiers.</li>
+      <li><strong>Location Data:</strong> Approximate or precise location if granted.</li>
+      <li><strong>Usage Data:</strong> Screens accessed, features used, interaction logs.</li>
+      <li><strong>Files & Media:</strong> Uploaded invoices, reports, or images (if chosen).</li>
+      <li><strong>Firebase Data:</strong> Firebase Authentication & FCM for login & push notifications.</li>
+    </ul>
 
-1. Information We Collect
+    <h2>2. How We Use Your Information</h2>
+    <ul>
+      <li>Provide and improve app functionality.</li>
+      <li>Personalize user experience.</li>
+      <li>Enable login, authentication, and account management.</li>
+      <li>Send important updates & notifications.</li>
+      <li>Process uploaded files (e.g., invoices, reports).</li>
+      <li>Monitor and enhance security and reliability.</li>
+    </ul>
 
-When you use Everpulse, we may collect the following types of information:
+    <h2>3. Data Sharing and Disclosure</h2>
+    <p>We do not sell or rent your personal data. We may share data only with trusted service providers (e.g., Firebase, Google Maps API), or if required by law.</p>
 
-Personal Information: Name, email, phone number (if provided by you).
+    <h2>4. Data Security</h2>
+    <p>We use industry-standard measures such as encryption and secure servers. However, no transmission over the internet is 100% secure.</p>
 
-Device Information: Device model, operating system, unique identifiers.
+    <h2>5. Data Retention</h2>
+    <p>We keep your data only as long as necessary. You may request deletion at any time.</p>
 
-Location Data: Approximate or precise location if you grant permission, used to provide visit tracking and location-based features.
+    <h2>6. Third-Party Services</h2>
+    <p>Everpulse uses third-party services like Google Firebase and Google Maps API. These have their own privacy policies.</p>
 
-Usage Data: Pages/screens you access, features you use, and interaction logs.
+    <h2>7. Your Rights</h2>
+    <ul>
+      <li>Access and update your data.</li>
+      <li>Request deletion of your account.</li>
+      <li>Withdraw location/notification permissions.</li>
+    </ul>
 
-Files & Media (if applicable): Uploaded invoices, reports, or images (only if you choose to upload them).
+    <h2>8. Children’s Privacy</h2>
+    <p>Our app is not directed to children under 13. If we become aware of such data collection, we delete it.</p>
 
-Firebase Data: We use Firebase Authentication and Firebase Cloud Messaging (FCM) for login and push notifications.
+    <h2>9. Updates</h2>
+    <p>We may update this policy from time to time. Updates will appear here with a new “Last Updated” date.</p>
 
-2. How We Use Your Information
+    <h2>10. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, contact us:</p>
+    <p><strong>Everbolt Engineering (Pvt) Ltd</strong><br>
+       Email: <a href="mailto:info@everbolt.lk">info@everbolt.lk</a><br>
+       Website: <a href="https://www.everbolt.lk" target="_blank">www.everbolt.lk</a></p>
 
-We use the information we collect to:
-
-Provide and improve app functionality.
-
-Personalize user experience.
-
-Enable login, user authentication, and account management.
-
-Send important notifications and updates.
-
-Process uploaded files or forms (e.g., invoices, reports).
-
-Monitor and improve security, performance, and reliability.
-
-3. Data Sharing and Disclosure
-
-We do not sell or rent your personal data. We may share your information only in the following cases:
-
-With trusted service providers (e.g., Firebase, Google Maps API) to operate the app.
-
-If required by law, regulation, or legal process.
-
-To protect the safety, rights, or property of our users or company.
-
-4. Data Security
-
-We use industry-standard security measures to protect your data, including encryption, secure servers, and access controls. However, no method of transmission over the internet is 100% secure.
-
-5. Data Retention
-
-We retain your personal information only as long as necessary for the purposes described in this Privacy Policy.
-
-You may request deletion of your data at any time (see Section 7).
-
-6. Third-Party Services
-
-Everpulse uses third-party services that may collect information:
-
-Google Firebase (Authentication, Cloud Messaging, Analytics)
-
-Google Maps API (for location/address features)
-
-These third parties have their own privacy policies.
-
-7. Your Rights
-
-You have the right to:
-
-Access and update your personal data.
-
-Request deletion of your account and data.
-
-Withdraw location or notification permissions from your device settings.
-
-To exercise these rights, contact us at info@everbolt.lk
-.
-
-8. Children’s Privacy
-
-Our app is not directed to children under 13. We do not knowingly collect information from children. If we become aware of such collection, we will delete the data.
-
-9. Updates to This Policy
-
-We may update this Privacy Policy from time to time. Updates will be posted on this page with a revised “Last Updated” date.
-
-10. Contact Us
-
-If you have any questions about this Privacy Policy, please contact us:
-
-Everbolt Engineering (Pvt) Ltd
-Email: info@everbolt.lk
-Website: https://www.everbolt.lk</p>
-  <!-- Paste the full policy text here -->
+    <footer>
+      &copy; 2025 Everbolt Engineering (Pvt) Ltd. All rights reserved.
+    </footer>
+  </div>
 </body>
 </html>
